# tele-gent

./: .env.example  LICENSE  README.md  bot.py  claude_runner.py  pty_manager.py  pyproject.toml  requirements.txt  setup.sh
.claude/thoughts/plans/: 2026-02-19-phase2-polish.md
hooks/: telegram-permission.py
tele_gent/: bot.py  claude_runner.py  config.py  pty_manager.py
